--- a/radio/docker-compose.yml
+++ b/radio/docker-compose.yml
@@ -1,11 +1,24 @@
 services:
   icecast:
     image: radio/icecast
-    env_file: ./icecast/env
     build: ./icecast
+    environment:
+      - ICECAST_SOURCE_PASSWORD=${ICECAST_SOURCE_PASSWORD}
+      - ICECAST_ADMIN_PASSWORD=${ICECAST_ADMIN_PASSWORD}
+      - ICECAST_ADMIN_USERNAME=${ICECAST_ADMIN_USERNAME}
+      - ICECAST_ADMIN_EMAIL=${ICECAST_ADMIN_EMAIL}
+      - ICECAST_LOCATION=${ICECAST_LOCATION}
+      - ICECAST_HOSTNAME=${ICECAST_HOSTNAME}
+      - ICECAST_MAX_CLIENTS=${ICECAST_MAX_CLIENTS}
+      - ICECAST_MAX_SOURCES=${ICECAST_MAX_SOURCES}
+      - ICECAST_ENVIVO_PASSWORD=${ICECAST_ENVIVO_PASSWORD}
+
 
   liquidsoap:
     image: radio/liquidsoap
-    env_file: ./liquidsoap/env
     build: ./liquidsoap
-
+    environment:
+      - LIQUIDSOAP_USER=${LIQUIDSOAP_USER}
+      - LIQUIDSOAP_PASS=${LIQUIDSOAP_PASS}
+      - LIQUIDSOAP_HOST=${LIQUIDSOAP_HOST}
+      - LIQUIDSOAP_MOUNT=${LIQUIDSOAP_MOUNT}
