--- a/radio/icecast/Dockerfile
+++ b/radio/icecast/Dockerfile
@@ -32,7 +32,7 @@ VOLUME ["/var/log/icecast2", "/etc/icecast2"]
 RUN useradd -m -s /bin/bash radio
 #CMD runuser -l radio -c 'icecast2 -c /etc/icecast2/icecast.xml'
 
-#ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/entrypoint.sh"]
 #CMD icecast2 -c /etc/icecast2/icecast.xml
 
 
