--- a/radio/docker-compose.yml
+++ b/radio/docker-compose.yml
@@ -12,13 +12,23 @@ services:
       - ICECAST_MAX_CLIENTS=${ICECAST_MAX_CLIENTS}
       - ICECAST_MAX_SOURCES=${ICECAST_MAX_SOURCES}
       - ICECAST_ENVIVO_PASSWORD=${ICECAST_ENVIVO_PASSWORD}
+    expose:
+      - "8000"
+      - "8001"
+	ports:
+      - "8000:8000"
+      - "8001:8001"
+    stop_grace_period: 1s
+#    entrypoint: /entrypoint.sh
 
 
-  liquidsoap:
-    image: radio/liquidsoap
-    build: ./liquidsoap
-    environment:
-      - LIQUIDSOAP_USER=${LIQUIDSOAP_USER}
-      - LIQUIDSOAP_PASS=${LIQUIDSOAP_PASS}
-      - LIQUIDSOAP_HOST=${LIQUIDSOAP_HOST}
-      - LIQUIDSOAP_MOUNT=${LIQUIDSOAP_MOUNT}
+#  liquidsoap:
+#    image: radio/liquidsoap
+#    build: ./liquidsoap
+#    environment:
+#      - LIQUIDSOAP_USER=${LIQUIDSOAP_USER}
+#      - LIQUIDSOAP_PASS=${LIQUIDSOAP_PASS}
+#      - LIQUIDSOAP_HOST=${LIQUIDSOAP_HOST}
+#      - LIQUIDSOAP_MOUNT=${LIQUIDSOAP_MOUNT}
+#    stop_grace_period: 1s
+#    entrypoint: /entrypoint.sh
