Install ices dependencies

--- a/radio/ices/Dockerfile
+++ b/radio/ices/Dockerfile
@@ -15,13 +15,13 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get -y update
 RUN apt-get install --no-install-recommends -y apt-utils
 RUN apt-get -y full-upgrade
-#RUN apt-get install --no-install-recommends -y wget 
+RUN apt-get install --no-install-recommends -y libshout3 libxml2 libmp3lame0 libvorbisfile3 
 RUN apt-get -y autoclean
 RUN apt-get clean
 
 COPY ices-0.4.deb /tmp/ices-0.4.deb
 COPY ices.conf /etc/ices/ices.conf
-COPY playlist.txt /etc/ices/playlist.txt
+COPY playlist.txt /playlist.txt
 RUN dpkg -i /tmp/ices-0.4.deb
 
 VOLUME ["/mnt/music"]
