Service run path updated

--- a/radio/ices/ices.conf
+++ b/radio/ices/ices.conf
@@ -15,7 +15,7 @@
 
   <Stream>
     <Server>
-      <Hostname>localhost</Hostname>
+      <Hostname>10.0.0.122</Hostname>
       <Port>8000</Port>
       <Password>pass</Password>
       <Protocol>http</Protocol>
