--- a/radio/ices/Dockerfile
+++ b/radio/ices/Dockerfile
@@ -5,13 +5,6 @@ LABEL maintainer "octavio.rossell@gmail.com"
 
 ENV DEBIAN_FRONTEND noninteractive
 
-# TEMPORAL
-#RUN echo "Acquire::Check-Valid-Until false;" > /etc/apt/apt.conf.d/10no--check-valid-until
-#RUN echo "deb http://10.0.0.2/debian-security bullseye-security main" > /etc/apt/sources.list
-#RUN echo "deb http://10.0.0.2/debian/ bullseye main" >> /etc/apt/sources.list
-#RUN echo "deb http://10.0.0.2/debian/ bullseye-updates main" >> /etc/apt/sources.list
-
-
 RUN apt-get -y update
 RUN apt-get install --no-install-recommends -y apt-utils
 RUN apt-get -y full-upgrade
@@ -30,6 +23,6 @@ COPY docker-entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 
-#CMD ["/entrypoint.sh"]
+CMD ["/entrypoint.sh"]
 
 
