--- a/radio/docker-compose.yml
+++ b/radio/docker-compose.yml
@@ -12,14 +12,10 @@ services:
       - ICECAST_MAX_CLIENTS=${ICECAST_MAX_CLIENTS}
       - ICECAST_MAX_SOURCES=${ICECAST_MAX_SOURCES}
       - ICECAST_ENVIVO_PASSWORD=${ICECAST_ENVIVO_PASSWORD}
-    expose:
-      - "8000"
-      - "8001"
-#	ports:
-#      - "8000:8000"
-#      - "8001:8001"
+	ports:
+      - "8000:8000"
+      - "8001:8001"
     stop_grace_period: 1s
-#    entrypoint: /entrypoint.sh
 
 
 #  liquidsoap:
